--- a/data-feature-selection/Feature-Selection.ipynb
+++ b/data-feature-selection/Feature-Selection.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "challengify"
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "challengify"
@@ -471,7 +471,7 @@
        "0.6419144066998052"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
       "\n",
       "test_base_model.py::TestBase_model::test_base_model_score \u001b[32mPASSED\u001b[0m\u001b[32m         [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.14s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.15s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "challengify"
@@ -593,62 +593,62 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>GrLivArea</td>\n",
-       "      <td>1.016667</td>\n",
+       "      <td>1.013554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>BedroomAbvGr</td>\n",
-       "      <td>0.065637</td>\n",
+       "      <td>0.066097</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Fin</td>\n",
-       "      <td>0.052784</td>\n",
+       "      <td>0.053572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Unf</td>\n",
-       "      <td>0.020618</td>\n",
+       "      <td>0.020979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>KitchenAbvGr</td>\n",
-       "      <td>0.019249</td>\n",
+       "      <td>0.020192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>CentralAir</td>\n",
-       "      <td>0.01514</td>\n",
+       "      <td>0.016539</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>NoGarage</td>\n",
-       "      <td>0.011925</td>\n",
+       "      <td>0.012306</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>RFn</td>\n",
-       "      <td>0.011436</td>\n",
+       "      <td>0.011432</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>sin_MoSold</td>\n",
-       "      <td>0.000906</td>\n",
+       "      <td>0.001009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>OverallCond</td>\n",
-       "      <td>0.000243</td>\n",
+       "      <td>0.00024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>RoofSurface</td>\n",
-       "      <td>0.000176</td>\n",
+       "      <td>0.000175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>cos_MoSold</td>\n",
-       "      <td>0.000065</td>\n",
+       "      <td>0.000043</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -656,21 +656,21 @@
       ],
       "text/plain": [
        "         feature feature importance\n",
-       "0      GrLivArea           1.016667\n",
-       "1   BedroomAbvGr           0.065637\n",
-       "6            Fin           0.052784\n",
-       "9            Unf           0.020618\n",
-       "2   KitchenAbvGr           0.019249\n",
-       "5     CentralAir            0.01514\n",
-       "7       NoGarage           0.011925\n",
-       "8            RFn           0.011436\n",
-       "10    sin_MoSold           0.000906\n",
-       "3    OverallCond           0.000243\n",
-       "4    RoofSurface           0.000176\n",
-       "11    cos_MoSold           0.000065"
+       "0      GrLivArea           1.013554\n",
+       "1   BedroomAbvGr           0.066097\n",
+       "6            Fin           0.053572\n",
+       "9            Unf           0.020979\n",
+       "2   KitchenAbvGr           0.020192\n",
+       "5     CentralAir           0.016539\n",
+       "7       NoGarage           0.012306\n",
+       "8            RFn           0.011432\n",
+       "10    sin_MoSold           0.001009\n",
+       "3    OverallCond            0.00024\n",
+       "4    RoofSurface           0.000175\n",
+       "11    cos_MoSold           0.000043"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,35 +735,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.8.12, pytest-7.1.3, pluggy-1.0.0 -- /Users/bita/.pyenv/versions/lewagon_current/bin/python3\n",
-      "cachedir: .pytest_cache\n",
-      "rootdir: /Users/bita/code/lewagon/data-feature-selection/tests\n",
-      "plugins: asyncio-0.19.0, anyio-3.6.2\n",
-      "asyncio: mode=strict\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 1 item\n",
-      "\n",
-      "test_feature_permutation.py::TestFeature_permutation::test_best_feature \u001b[32mPASSED\u001b[0m\u001b[32m [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.03s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
-      "\n",
-      "\n",
-      "💯 You can commit your code:\n",
-      "\n",
-      "\u001b[1;32mgit\u001b[39m add tests/feature_permutation.pickle\n",
-      "\n",
-      "\u001b[32mgit\u001b[39m commit -m \u001b[33m'Completed feature_permutation step'\u001b[39m\n",
-      "\n",
-      "\u001b[32mgit\u001b[39m push origin master\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'best_feature' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [12], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnbresult\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ChallengeResult\n\u001b[1;32m      3\u001b[0m result \u001b[38;5;241m=\u001b[39m ChallengeResult(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfeature_permutation\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m----> 4\u001b[0m                          feature \u001b[38;5;241m=\u001b[39m \u001b[43mbest_feature\u001b[49m\n\u001b[1;32m      5\u001b[0m )\n\u001b[1;32m      7\u001b[0m result\u001b[38;5;241m.\u001b[39mwrite()\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(result\u001b[38;5;241m.\u001b[39mcheck())\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'best_feature' is not defined"
      ]
     }
    ],
