Completed loss function step

--- a/data-loss-functions/Loss-Functions.ipynb
+++ b/data-loss-functions/Loss-Functions.ipynb
@@ -58,54 +58,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>0.71</td>\n",
-       "      <td>710.5</td>\n",
-       "      <td>269.5</td>\n",
-       "      <td>220.5</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>12.445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>223</th>\n",
-       "      <td>0.71</td>\n",
-       "      <td>710.5</td>\n",
-       "      <td>269.5</td>\n",
-       "      <td>220.5</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>12.460</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>0.66</td>\n",
-       "      <td>759.5</td>\n",
-       "      <td>318.5</td>\n",
-       "      <td>220.5</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>12.670</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>297</th>\n",
-       "      <td>0.86</td>\n",
-       "      <td>588.0</td>\n",
+       "      <th>435</th>\n",
+       "      <td>0.98</td>\n",
+       "      <td>514.5</td>\n",
        "      <td>294.0</td>\n",
-       "      <td>147.0</td>\n",
+       "      <td>110.25</td>\n",
        "      <td>7.0</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>29.330</td>\n",
+       "      <td>29.370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>0.64</td>\n",
-       "      <td>784.0</td>\n",
-       "      <td>343.0</td>\n",
-       "      <td>220.5</td>\n",
-       "      <td>3.5</td>\n",
+       "      <th>396</th>\n",
+       "      <td>0.82</td>\n",
+       "      <td>612.5</td>\n",
+       "      <td>318.5</td>\n",
+       "      <td>147.00</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>26.735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>0.76</td>\n",
+       "      <td>661.5</td>\n",
+       "      <td>416.5</td>\n",
+       "      <td>122.50</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>0.10</td>\n",
-       "      <td>17.265</td>\n",
+       "      <td>33.645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>0.62</td>\n",
+       "      <td>808.5</td>\n",
+       "      <td>367.5</td>\n",
+       "      <td>220.50</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>14.870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>607</th>\n",
+       "      <td>0.71</td>\n",
+       "      <td>710.5</td>\n",
+       "      <td>269.5</td>\n",
+       "      <td>220.50</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>16.110</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -113,18 +113,18 @@
       ],
       "text/plain": [
        "     Relative Compactness  Surface Area  Wall Area  Roof Area  Overall Height  \\\n",
-       "127                  0.71         710.5      269.5      220.5             3.5   \n",
-       "223                  0.71         710.5      269.5      220.5             3.5   \n",
-       "87                   0.66         759.5      318.5      220.5             3.5   \n",
-       "297                  0.86         588.0      294.0      147.0             7.0   \n",
-       "91                   0.64         784.0      343.0      220.5             3.5   \n",
+       "435                  0.98         514.5      294.0     110.25             7.0   \n",
+       "396                  0.82         612.5      318.5     147.00             7.0   \n",
+       "118                  0.76         661.5      416.5     122.50             7.0   \n",
+       "476                  0.62         808.5      367.5     220.50             3.5   \n",
+       "607                  0.71         710.5      269.5     220.50             3.5   \n",
        "\n",
        "     Glazing Area  Average Temperature  \n",
-       "127          0.10               12.445  \n",
-       "223          0.10               12.460  \n",
-       "87           0.10               12.670  \n",
-       "297          0.25               29.330  \n",
-       "91           0.10               17.265  "
+       "435          0.25               29.370  \n",
+       "396          0.25               26.735  \n",
+       "118          0.10               33.645  \n",
+       "476          0.25               14.870  \n",
+       "607          0.40               16.110  "
       ]
      },
      "execution_count": 1,
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "challengify"
@@ -272,12 +272,32 @@
     "from sklearn.linear_model import SGDRegressor\n",
     "from sklearn.model_selection import cross_validate\n",
     "\n",
-    "model_r2 = SGDRegressor()\n",
+    "model = SGDRegressor()\n",
     "\n",
     "y = data['Average Temperature']\n",
     "\n",
-    "cv_linear_regression = cross_validate(model_r2, X_scaled, y, cv=10, scoring=['max_error', 'r2'])\n",
-    "r2 = cv_linear_regression['test_r2'].mean()"
+    "cv_linear_regression = cross_validate(model, X_scaled, y, cv=10, scoring=['neg_mean_squared_error'])\n",
+    "mse = cv_linear_regression['test_neg_mean_squared_error'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-9.046488801575064"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mse"
    ]
   },
   {
@@ -293,11 +313,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8977919968579606"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "max_error = cv_linear_regression['test_max_error'].mean()"
+    "cv_r2 = cross_validate(model, X_scaled, y, cv=10, scoring =['max_error', 'r2'])\n",
+    "r2 = cv_r2['test_r2'].mean()\n",
+    "r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-7.870733035043315"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_error = cv_r2['test_max_error'].max()\n",
+    "max_error"
    ]
   },
   {
@@ -330,35 +384,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.947551765490675"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
     "import numpy as np \n",
     "\n",
     "model_mae = SGDRegressor()\n",
     "\n",
-    "cv_linear_regression_mae = cross_validate(model_mae, X_scaled, y, cv=10, scoring=['r2', 'max_error'])\n",
+    "cv_linear_regression_mae = cross_validate(model_mae, X_scaled, y, cv=10, scoring=['neg_mean_absolute_error', 'r2', 'max_error'])\n",
     "\n",
-    "r2_mae = cv_linear_regression_mae['test_max_error'].mean()\n",
+    "mean_abs_error = cv_linear_regression_mae['test_neg_mean_absolute_error'].mean()\n",
+    "max_error_mae = cv_linear_regression_mae['test_max_error'].max()\n",
     "\n",
-    "r2_mae = np.sqrt(r2_mae)\n",
+    "r2_mae = cv_linear_regression_mae['test_r2'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-7.680458421680356"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_error_mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8978756164158399"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "r2_mae"
    ]
   },
@@ -369,29 +452,6 @@
     "❓ Compute \n",
     "- the mean cross-validated R2 score, store it in `r2_mae`\n",
     "- the single biggest prediction error of all your folds, store it in `max_error_mae`?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9689435448836269"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max_error_mae = cv_linear_regression_mae['test_score'].max()\n",
-    "\n",
-    "max_error_mae = np.sqrt(max_error_mae)\n",
-    "max_error_mae"
    ]
   },
   {
