Completer new_data_prediction step

--- a/data-solvers/Solvers.ipynb
+++ b/data-solvers/Solvers.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "challengify"
@@ -215,7 +215,7 @@
        "array([ 6,  7,  4,  8,  3,  1,  2, 10,  5,  9])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "Name: quality rating, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "challengify"
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "challengify"
@@ -300,7 +300,7 @@
        "Name: quality rating, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "challengify"
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "challengify"
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "tags": [
      "challengify"
@@ -399,31 +399,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.3382686376571655,\n",
-       " 0.3423058271408081,\n",
-       " 0.2305824041366577,\n",
-       " 0.6785547494888305,\n",
-       " 1.173775863647461]"
+       "[('newton-cg', 0.36510956287384033),\n",
+       " ('lbfgs', 0.35312724113464355),\n",
+       " ('liblinear', 0.23719451427459717),\n",
+       " ('sag', 0.6500300645828248),\n",
+       " ('saga', 1.1929015159606933)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fit_time"
+    "list(zip(solvers,fit_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,26 +455,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.8742370014407493,\n",
-       " 0.8742344676126175,\n",
-       " 0.8743399285518076,\n",
-       " 0.8742159423885985,\n",
-       " 0.8742370014407493]"
+       "[('newton-cg', 0.8742370014407493),\n",
+       " ('lbfgs', 0.8742344676126175),\n",
+       " ('liblinear', 0.8743399285518076),\n",
+       " ('sag', 0.8741662350593616),\n",
+       " ('saga', 0.8742370014407493)]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Precision"
+    "list(zip(solvers, Precision))"
    ]
   },
   {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
       "\n",
       "test_solvers.py::TestSolvers::test_fastest_solver \u001b[32mPASSED\u001b[0m\u001b[32m                 [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.07s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.03s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
@@ -561,76 +561,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.16384310722351075\n",
+      "0.882204913252474\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
     "from sklearn.linear_model import SGDClassifier\n",
     "\n",
-    "solvers= ['newton-cg', 'lbfgs', 'liblinear', 'sag', 'saga']\n",
-    "fit_time = []\n",
-    "Precision = []\n",
+    "#solvers= ['newton-cg', 'lbfgs', 'liblinear', 'sag', 'saga']\n",
+    "#fit_time = []\n",
+    "#Precision = []\n",
     "\n",
     "model_sgd_classifier = SGDClassifier()\n",
     "\n",
-    "for x in solvers:\n",
-    "    model_log_reg = LogisticRegression(solver=x, max_iter=1000)\n",
-    "    x = cross_validate(model_sgd_classifier, X_scaled, y, cv=10, scoring='precision')\n",
-    "    fit_time.append(x['fit_time'].mean())\n",
-    "    Precision.append(x['test_score'].mean())"
+    "#for x in solvers:\n",
+    "    #model_log_reg = LogisticRegression(solver=x, max_iter=1000)\n",
+    "x = cross_validate(model_sgd_classifier, X_scaled, y, cv=10, scoring='precision')\n",
+    "fit_time = x['fit_time'].mean()\n",
+    "Precision = x['test_score'].mean()\n",
+    "print(fit_time)\n",
+    "print(Precision)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.1762096643447876,\n",
-       " 0.19046370983123778,\n",
-       " 0.20328178405761718,\n",
-       " 0.17328157424926757,\n",
-       " 0.18087735176086425]"
+       "[('newton-cg', 0.18423283100128174),\n",
+       " ('lbfgs', 0.2034247636795044),\n",
+       " ('liblinear', 0.19754619598388673),\n",
+       " ('sag', 0.18958969116210939),\n",
+       " ('saga', 0.1863905668258667)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fit_time"
+    "list(zip(solvers,fit_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.8837513180049648,\n",
-       " 0.882299076728081,\n",
-       " 0.8794460586567867,\n",
-       " 0.8892483691503413,\n",
-       " 0.8868936551195945]"
+       "[('newton-cg', 0.8916048067919251),\n",
+       " ('lbfgs', 0.8846398864374037),\n",
+       " ('liblinear', 0.8741498251829674),\n",
+       " ('sag', 0.8822505276189924),\n",
+       " ('saga', 0.8916073826032864)]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Precision"
+    "list(zip(solvers,Precision))"
    ]
   },
   {
